# haclient

./: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  Main.qml  main.cpp
